OPTIMUS-36426 export changes from b376a5e7040603ae8b10be01260d2efd481f6f70